status chips converted to custom card

--- a/ui_lovelace_minimalist/custom_cards/layout/headers/room_header.yaml
+++ b/ui_lovelace_minimalist/custom_cards/layout/headers/room_header.yaml
@@ -2,7 +2,7 @@
 room_header:
   template:
     - discovery_variables
-    - grid_two_columns
+    - grid_single_column
     - no_background
     - no_click
 
