--- a/ui_lovelace_minimalist/dashboard/views/mainviews/cats.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/cats.yaml
@@ -32,6 +32,12 @@ layout:
         "noms"
 cards:
   #################
+  # HEADER
+  #################
+  - type: custom:button-card
+    template: mainview_header
+
+  #################
   # STATUS CHIPS
   #################
   - type: custom:mod-card
@@ -73,8 +79,6 @@ cards:
                       else return "var(--red-color)"; ]]]
           variables:
             ulm_chip_mdi_icon_state_entity: sensor.cat_noms_desiccant_days_remaining
-        - type: custom:button-card
-          template: mainview_header
 
   - type: 'custom:button-card'
     template: card_title
