--- a/ui_lovelace_minimalist/dashboard/views/subviews/pi-hole.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/subviews/pi-hole.yaml
@@ -7,11 +7,9 @@ cards:
   #################
   - type: custom:button-card
     template: subview_header
-    view_layout:
-      grid-area: header
     variables:
       image: /local/img/pi-hole.png
-      single_column: true
+      image_nav: http://poat-hole.local/admin/index.php
 
   - type: 'custom:button-card'
     entity: binary_sensor.pi_hole_status
