--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !www/img/*
 !assets/**
 
+
 # Ignore folders.
 .storage
 .cloud
@@ -21,6 +22,7 @@
 .ssh
 .DS_Store
 custom_components
+themes
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
