--- a/ui_lovelace_minimalist/dashboard/views/mainviews/lights.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/lights.yaml
@@ -6,20 +6,20 @@ layout:
   grid-template-columns: auto
   grid-template-rows: auto
   grid-template-areas: |
-    "header header killswitch killswitch"
+    "killswitch killswitch killswitch killswitch"
     "lights-on lights-on switches-on switches-on"
     "lights-off lights-off switches-off switches-off"
   mediaquery:
     # portrait monitor
     'only screen and (min-width: 769px) and (max-width: 1400px)':
       grid-template-areas: |
-        "header killswitch"
+        "killswitch killswitch"
         "lights-on switches-on"
         "lights-off switches-off"
     # Smartphones
     'only screen and (max-width: 768px)':
       grid-template-areas: |
-        "header killswitch"
+        "killswitch killswitch"
         "lights-on lights-on"
         "switches-on switches-on"
         "lights-off lights-off"
@@ -30,10 +30,7 @@ cards:
   #################
   - type: custom:button-card
     template: mainview_header
-    view_layout:
-      grid-area: header
     variables:
-      no_columns: true
       solo_label: lights
 
   - type: 'custom:button-card'
