--- a/automations/systems/alert_to_persistent.yaml
+++ b/automations/systems/alert_to_persistent.yaml
@@ -133,13 +133,22 @@ action:
           id: create-ai
         - "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
       sequence:
-        alias: Clear the notification
-        action: notify.send_message
-        data:
-          entity_id: notify.my_direct_message_notifier
-          message: clear_notification
+        - alias: Dismiss the persistent notification
+          action: persistent_notification.dismiss
           data:
-            tag: '{{ trigger.event.data.service_data.data.tag }}'
+            notification_id: '{{ trigger.event.data.service_data.data.tag }}'
+        - alias: Clear Poat's notification
+          action: notify.mobile_app_poat_s_iphone_14_pro_max
+          data:
+            message: clear_notification
+            data:
+              tag: '{{ trigger.event.data.service_data.data.tag }}'
+        - alias: Clear Gina's notification
+          action: notify.mobile_app_poat_s_iphone_14_pro_max
+          data:
+            message: clear_notification
+            data:
+              tag: '{{ trigger.event.data.service_data.data.tag }}'
 
     # if notify.family is used - clear persistent notification
     # triggered if clear_notification used
