--- a/customizations/globs/globs.yaml
+++ b/customizations/globs/globs.yaml
@@ -4,14 +4,21 @@
 # https://www.home-assistant.io/integrations/homeassistant/#manual-customization
 #####
 
+# counters
 'counter.homeassistant_*':
   navigation_path: /config/logs
 
+# binary sensors
 'binary_sensor.poat_*_local':
   on_state: 'off'
 
+'binary_sensor.*_water_level':
+  navigation_path: /the-matrix/cats
+
+# sensors
 'sensor.*_battery_level':
   device_class: battery
 
-'binary_sensor.*_water_level':
-  navigation_path: /the-matrix/cats
+# switches
+'switch.*_fan':
+  on_color: blue
