--- a/entities/templates/printer_left_on.yaml
+++ b/entities/templates/printer_left_on.yaml
@@ -9,5 +9,4 @@
       state: "{{ not is_state('sensor.mfc_7860dw_page_counter', 'unavailable') and (now() - states.sensor.mfc_7860dw_page_counter.last_updated) > timedelta(minutes=5) }}"
       icon: mdi:printer-alert
       attributes:
-        navigation_path: /the-matrix/network?anchor=updates
-        on_state: 'True'
+        navigation_path: /the-matrix/lab
